# django-pint

./: .converagerc  .coveragerc  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE.txt  Makefile  README.md  agents.md  ci_setup_postgres.sh  docker-compose.yaml  manage.py  noxfile.py  pyproject.toml  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: copilot-setup-steps.yml  publish-to-pypi.yml  test.yaml
django_pint_site/: manage.py
django_pint_site/django_pint/: apps.py  fields.py
django_pint_site/django_pint_site/: settings.py  urls.py
django_pint_site/django_quantityfield/: __init__.py  fields.py  widgets.py
django_pint_site/quantityfield_tests/: apps.py
django_pint_site/quantityfield_tests/templates/: test_form.html
docs/: Makefile  conf.py  index.rst  requirements.txt  usage.rst
quantityfield/: __init__.py  fields.py  widgets.py
sandbox/: manage.py
sandbox/django_pint_sandbox/: settings.py  urls.py  wsgi.py
sandbox/example_app/: admin.py  apps.py  forms.py  models.py  views.py
sandbox/example_app/migrations/: 0001_initial.py
sandbox/example_app/templates/: base.html  test_form.html
src/django_pint/: __init__.py  fields.py  helper.py  settings.py  units.py
src/quantityfield/: __init__.py  exceptions.py  fields.py  helper.py  settings.py  units.py  widgets.py
tests/: conftest.py  field_tests.py  local.py  local.py.docker-example  settings.py  test_admin.py  test_field.py  test_field_orm.py  test_helper.py  test_imports.py  test_integration.py  test_widget.py  widget_tests.py
tests/dummyapp/: admin.py  asgi.py  forms.py  helper.py  models.py  wsgi.py
tests/dummyapp/migrations/: 0001_initial.py  0002_offsetunitfloatfieldsavemodel.py  0003_update_field_paths.py
