# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = django-pint
description = "Quantity Field for Django using pint library for automated unit conversions"
author = Ben Harling, Carli* Freudenberg
author_email = kound@posteo.de
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/CarliJoy/django-pint/
project_urls =
    Documentation = https://django-pint.readthedocs.io/en/latest/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    importlib-metadata; python_version<"3.8"
    Django>=3.2
    pint>=0.16
# The usage of test_requires is discouraged, see `Dependency Management` docs
# of PyScaffold
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install django-pint[testing]` like:
# testing = pytest; tox
# Add here test requirements (semicolon/line-separated)
testing =
    pytest>=6.1
    pytest-cov>=2.1
    pytest-django>=0.4
    tox>=3.2
build_doc =
    sphinx
    recommonmark>=0.6.0
    m2r2

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = django_pint.module:function
# For example:
# console_scripts =
#     fibonacci = django_pint.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
# extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov quantityfield --cov-report=xml --cov-report=term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
DJANGO_SETTINGS_MODULE = tests.settings

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .venv*
per-file-ignores =
    tests/settings.py:E402,F401
    tests/dummyapp/admin.py:F405

[isort]
profile=black
skip=.tox,.venv*,build,dist
known_standard_library=setuptools,pkg_resources
known_test=pytest
known_django=django
known_first_party=django_pint
known_pandas=pandas,numpy
sections=FUTURE,STDLIB,TEST,DJANGO,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1
package = django_pint
extensions =
    markdown
    pre_commit
    tox
    travis
